objects/CommandCenter__RM_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>CommandCenter__ADOP_Domain_URL__c</fullName>
        <inlineHelpText>Enter domain name of ADOP platform</inlineHelpText>
        <label>ADOP Domain URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Cred_same_as_ADOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credentials same as ADOP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Deploy_Job_URL__c</fullName>
        <label>Deploy Job URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Deployment_Approval_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this checkbox if your release process does not need any approval. Default value id TRUE</description>
        <inlineHelpText>Uncheck this checkbox if your release process does not need any approval. Default value id TRUE</inlineHelpText>
        <label>Deployment Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Jenkins_Job_Name__c</fullName>
        <label>Jenkins Job Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Jenkins_Password__c</fullName>
        <label>Jenkins Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Jenkins_User_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Specify whether this user will be used for communicating with Jenkins or not.</inlineHelpText>
        <label>Jenkins User Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Jenkins_User_Name__c</fullName>
        <label>Jenkins User Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Job_Name__c</fullName>
        <label>Job Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Job_Token__c</fullName>
        <inlineHelpText>This is the jenkins job token. User has to specify this token if the job needs to be triggered from RM app. User can get this token from Jenkins job configuration -&gt; Build Triggers -&gt; Trigger Builds Remotely</inlineHelpText>
        <label>Job Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Job_Type__c</fullName>
        <defaultValue>&apos;Pipeline Job&apos;</defaultValue>
        <label>Job Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pipeline Job</fullName>
                    <default>true</default>
                    <label>Pipeline Job</label>
                </value>
                <value>
                    <fullName>Standalone Job</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Job_URL__c</fullName>
        <label>Job URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Manual_Steps_Required__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this checkbox if your deployment process does not have any manual steps to be completed before deployment. Default value if TRUE.</description>
        <inlineHelpText>Uncheck this checkbox if your deployment process does not have any manual steps to be completed before deployment. Default value if TRUE.</inlineHelpText>
        <label>Manual Steps Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Max_of_Pipeline_to_Save__c</fullName>
        <description>Maximum number of pipelines to save for each release. Pipelines exceeding this number will be deleted automatically without any notification.</description>
        <inlineHelpText>Maximum number of pipelines to save for each release. Pipelines exceeding this number will be deleted automatically without any notification.</inlineHelpText>
        <label>Max # of Pipeline to Save</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CommandCenter__On_Demand_Job_Token__c</fullName>
        <inlineHelpText>This is the jenkins job token. User has to specify this token if the job needs to be triggered from RM app. User can get this token from Jenkins job configuration -&gt; Build Triggers -&gt; Trigger Builds Remotely</inlineHelpText>
        <label>On-Demand Job Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__On_Demand_Validation_Job_URL__c</fullName>
        <label>On-Demand Validation Job URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__On_Demand_Validation_Needed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this checkbox if your deployment process does not need on-demand validation. Default value if TRUE.</description>
        <inlineHelpText>Uncheck this checkbox if your deployment process does not need on-demand validation. Default value if TRUE.</inlineHelpText>
        <label>On-Demand Validation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Package_To_Validate__c</fullName>
        <label>Package To Validate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Main_Package</fullName>
                </value>
                <value>
                    <fullName>Destructive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Pipeline_URL__c</fullName>
        <label>Pipeline URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Project_Team_Name__c</fullName>
        <label>Project / Team Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Repository_Name__c</fullName>
        <description>Select the GIT repository used</description>
        <label>Repository Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gerrit</fullName>
                </value>
                <value>
                    <fullName>BitBucket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CommandCenter__Repository_Password__c</fullName>
        <label>Repository Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Repository_URL__c</fullName>
        <label>Repository URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Repository_Username__c</fullName>
        <label>Repository Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__SFDC_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RM_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Salesforce_Password__c</fullName>
        <label>Salesforce Password</label>
        <length>50</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Salesforce_Token__c</fullName>
        <label>Salesforce Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Salesforce_URL__c</fullName>
        <label>Salesforce URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Salesforce_Username__c</fullName>
        <label>Salesforce Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Source_Org__c</fullName>
        <label>Source Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Target_Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF Environment</label>
        <referenceTo>CommandCenter__SF_Environment__c</referenceTo>
        <relationshipLabel>RM Configuration</relationshipLabel>
        <relationshipName>RM_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommandCenter__Target_Org__c</fullName>
        <label>Target Org</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommandCenter__View_Dashboard__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this box if you do not want to see the dashboard on deployment page. Default value id TRUE</description>
        <inlineHelpText>Uncheck this box if you do not want to see the dashboard on deployment page. Default value id TRUE</inlineHelpText>
        <label>View Dashboard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__View_Pipeline_Log__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this checkbox if you do not want to see pipeline log on deployment page. Default value id TRUE</description>
        <label>View Pipeline Log</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommandCenter__View_Pipeline__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck this checkbox if you do not want to see pipeline on deployment page. Default value id TRUE</description>
        <inlineHelpText>Uncheck this checkbox if you do not want to see pipeline on deployment page. Default value id TRUE</inlineHelpText>
        <label>View Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <label>RM Configuration</label>
    <listViews>
        <fullName>CommandCenter__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CommandCenter__Job_Name__c</columns>
        <columns>CommandCenter__Jenkins_User_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CommandCenter__Jenkins_Authentication</fullName>
        <columns>NAME</columns>
        <columns>CommandCenter__Jenkins_User_Name__c</columns>
        <columns>CommandCenter__Jenkins_Password__c</columns>
        <columns>CommandCenter__ADOP_Domain_URL__c</columns>
        <columns>CommandCenter__SFDC_User__c</columns>
        <columns>CommandCenter__Jenkins_User_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CommandCenter__RM_Configuration__c.CommandCenter__Jenkins_Authentication</value>
        </filters>
        <label>Jenkins Authentication</label>
    </listViews>
    <listViews>
        <fullName>CommandCenter__Repository</fullName>
        <columns>NAME</columns>
        <columns>CommandCenter__Project_Team_Name__c</columns>
        <columns>CommandCenter__Repository_Name__c</columns>
        <columns>CommandCenter__Repository_Password__c</columns>
        <columns>CommandCenter__Repository_URL__c</columns>
        <columns>CommandCenter__Repository_Username__c</columns>
        <columns>CommandCenter__Cred_same_as_ADOP__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>CommandCenter__RM_Configuration__c.CommandCenter__RM_Repository</value>
        </filters>
        <label>Repository</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Conf-{000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RM Configuration</pluralLabel>
    <recordTypes>
        <fullName>CommandCenter__Jenkins_Authentication</fullName>
        <active>true</active>
        <label>Jenkins Authentication</label>
    </recordTypes>
    <recordTypes>
        <fullName>CommandCenter__Jenkins_Job</fullName>
        <active>true</active>
        <description>This record type is used for configuring Jenkins jobs</description>
        <label>Jenkins Job</label>
    </recordTypes>
    <recordTypes>
        <fullName>CommandCenter__RM_Config</fullName>
        <active>true</active>
        <description>Release Management App Configuration</description>
        <label>RM Config</label>
    </recordTypes>
    <recordTypes>
        <fullName>CommandCenter__RM_Repository</fullName>
        <active>true</active>
        <label>RM_Repository</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CommandCenter__Avoid_Negative_Value</fullName>
        <active>true</active>
        <description>to avoid the negative value</description>
        <errorConditionFormula>CommandCenter__Max_of_Pipeline_to_Save__c &lt; 0</errorConditionFormula>
        <errorDisplayField>CommandCenter__Max_of_Pipeline_to_Save__c</errorDisplayField>
        <errorMessage>Can&apos;t be a negative value</errorMessage>
    </validationRules>
</CustomObject>